Page MenuHome GnuPG

Smartcard reinsert fails with gnupg 2.1.15 (gpg-agent/scdaemon)
Closed, ResolvedPublic

Description

Hi,
I am using Arch Linux and recently upgraded gnupg to 2.1.15.
I have a REINER SCT cyberJack secoder and a OpenPGP Smartcard V2.1.

gpg --card-status works the first time when I insert the card.
If I reinsert it, gpg --card-status fails three times with:
gpg: selecting openpgp failed: Kein passendes Gerät gefunden | gpg: selecting openpgp failed: Device not found
gpg: OpenPGP Karte ist nicht vorhanden: Kein passendes Gerät gefunden | gpg: OpenPGP card not available: Device not found

and then with:
gpg: selecting openpgp failed: Kartenfehler | gpg: selecting openpgp failed: Card error
gpg: OpenPGP Karte ist nicht vorhanden: Kartenfehler | gpg: OpenPGP card not available: Card error

When I restart gpg-agent it works again (for one insert).
Downgrading gnupg to 2.1.14 fixes this bug.

gpg (GnuPG) 2.1.15
gpg-agent (GnuPG) 2.1.15
libgcrypt 1.7.3
PC/SC lite version: 1.8.16

gpg-agent.conf:
enable-ssh-support
default-cache-ttl 3600
debug-level expert
log-file /tmp/gpg.log

Details

Version
2.1.15

Event Timeline

I confirmed that it's a regression in 2.1.15.

Fixed in master.

f9e49c8 scd: Fix an action after card removal.
gniibe removed a project: Restricted Project.

Fixed in 2.1.16.